--- a/Documentation/Configuration.dox
+++ b/Documentation/Configuration.dox
@@ -38,6 +38,7 @@ This section contains the list of all supported hardware and software devices. C
 - \subpage DeviceInfraredTEEV2Cam
 - \subpage DeviceUltravioletPCOUVCam
 - \subpage DeviceDAQVideoSource
+- \subpage DeviceFLIRSpinnakerCam
 - \subpage DeviceSpinnaker
 - \subpage DeviceBlackMagicDeckLink
 - \subpage DeviceAzureKinect
